// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Container Invalid field snapshot 1`] = `
.c1 {
  color: #000000;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c1 {
  margin-left: 0.5rem;
}

.c2 {
  color: #A40C2E;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0.25rem 0 0;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #A40C2E;
}

.c0:focus {
  border-color: #A40C2E;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="test-id"
  >
    test label
  </label>
  Children
  <div
    aria-live="polite"
    className="c2"
    id="test-id_invalid"
    role="alert"
  >
    This text area input is invalid
  </div>
</div>
`;

exports[`Field Container Valid field snapshot 1`] = `
.c1 {
  color: #000000;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c1 {
  margin-left: 0.5rem;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="test-id"
  >
    test label
  </label>
  Children
</div>
`;
